[tool.poetry]
name = "jira-parser"
version = "0.1.0"
description = ""
authors = ["Akxary <pollxx97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.14.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.19.0"
black = "^25.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
